Support debounced embedding update and Remove health endpoint for client export and fix tests (#55)
* Support debounced embedding update

* Remove health endpoint for client export and fix tests

* Release new version

* Auto commit: update dependencies & generated client & code formatting

---------
