# doc/openapi.json
@@ -378,27 +378,6 @@
           }
         }
       }
-    },
-    "/health/osint/query": {
-      "get": {
-        "tags": [
-          "health"
-        ],
-        "summary": "Health Check",
-        "operationId": "health_check",
-        "responses": {
-          "200": {
-            "description": "Successful Response",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/HealthCheck"
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components": {
@@ -601,20 +580,6 @@
         },
         "type": "object",
         "title": "HTTPValidationError"
-      },
-      "HealthCheck": {
-        "properties": {
-          "status": {
-            "type": "string",
-            "title": "Status",
-            "description": "The health status of the service."
-          }
-        },
-        "type": "object",
-        "required": [
-          "status"
-        ],
-        "title": "HealthCheck"
       },
       "LocationData": {
         "properties": {
