# src/omni_osint_query/routers/health.py
@@ -9,7 +9,12 @@ class HealthCheck(BaseModel):
     status: str = Field(description="The health status of the service.")
 
 
-@router.get("/health/osint/query", response_model=HealthCheck, operation_id="health_check")
+@router.get(
+    "/health",
+    response_model=HealthCheck,
+    operation_id="health_check",
+    include_in_schema=False,
+)
 def health_check():
     ArangoDBClient().db.version()
     RedisClient().client.ping()
